[tool.poetry]
name = "coursework-andrianov-m-s"
version = "0.1.0"
description = ""
authors = ["Maksim Andreev <andrianov_maksim@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
isort = "^5.13.2"
black = "^24.10.0"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
