[tool.poetry]
name = "coursework-andrianov-m-s"
version = "0.1.0"
description = ""
authors = ["Maksim Andreev <andrianov_maksim@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
datetime = "^5.5"
logging = "^0.4.9.6"
pandas = "^2.2.3"
requests = "^2.32.3"
pytest-cov = "^6.0.0"
openpyxl = "^3.1.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
isort = "^5.13.2"
black = "^24.10.0"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.mypy]
disallow_untyped_defs = false
no_implicit_optional = true
warn_return_any = false
warn_unreachable = true
exclude = 'venv'


[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов 
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.gitignore
    | dist
  )/
)
'''

[tool.isort]
line_length = 119
skip_glob = ["docs/*"]
skip = [".gitignore", ".dockerignore"]
